[gd_scene load_steps=19 format=2]

[ext_resource path="res://screens/game/game.gd" type="Script" id=1]
[ext_resource path="res://screens/game/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://screens/game/slime_brain/slime_brain.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/game/entities.gd" type="Script" id=4]
[ext_resource path="res://screens/game/turn_system.gd" type="Script" id=5]
[ext_resource path="res://screens/game/space.gd" type="Script" id=6]
[ext_resource path="res://screens/game/fog.gd" type="Script" id=7]
[ext_resource path="res://screens/game/hud/hud.tscn" type="PackedScene" id=8]
[ext_resource path="res://screens/game/fog_tileset.tres" type="TileSet" id=9]
[ext_resource path="res://screens/game/targeting_tileset.tres" type="TileSet" id=10]
[ext_resource path="res://screens/game/ts_fix.tres" type="TileSet" id=11]
[ext_resource path="res://screens/game/space/cavern_drop.wav" type="AudioStream" id=12]
[ext_resource path="res://screens/game/space/plant_grow.wav" type="AudioStream" id=14]
[ext_resource path="res://screens/game/space/spell.wav" type="AudioStream" id=15]
[ext_resource path="res://screens/game/space/caves.ogg" type="AudioStream" id=16]
[ext_resource path="res://screens/game/space/island.ogg" type="AudioStream" id=17]
[ext_resource path="res://screens/game/space/demon.ogg" type="AudioStream" id=18]
[ext_resource path="res://screens/game/space/roots.wav" type="AudioStream" id=19]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Space" type="Node2D" parent="."]
script = ExtResource( 6 )
turn_system_path = NodePath("../TurnSystem")

[node name="Tiles" type="TileMap" parent="Space"]
z_index = -20
z_as_relative = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 851986, 15, 0, 851987, 16, 0 )

[node name="TileFix" type="TileMap" parent="Space"]
z_index = -20
z_as_relative = false
tile_set = ExtResource( 11 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 786451, 12, 0, 851986, 15, 0, 851987, 16, 0 )

[node name="Objects" type="TileMap" parent="Space"]
z_index = -10
z_as_relative = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Entities" type="YSort" parent="Space"]
script = ExtResource( 4 )

[node name="Air" type="TileMap" parent="Space"]
z_index = -10
z_as_relative = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Effects" type="YSort" parent="Space"]

[node name="Targeting" type="TileMap" parent="Space"]
tile_set = ExtResource( 10 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="FOG" type="TileMap" parent="Space"]
tile_set = ExtResource( 9 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 7 )
space_path = NodePath("..")

[node name="SlimeBrain" parent="Space" instance=ExtResource( 3 )]

[node name="CavernDrop" type="AudioStreamPlayer" parent="Space"]
stream = ExtResource( 12 )
bus = "SFX"

[node name="PlantGrow" type="AudioStreamPlayer" parent="Space"]
stream = ExtResource( 14 )
bus = "SFX"

[node name="Spell" type="AudioStreamPlayer" parent="Space"]
stream = ExtResource( 15 )
bus = "SFX"

[node name="Roots" type="AudioStreamPlayer" parent="Space"]
stream = ExtResource( 19 )
bus = "SFX"

[node name="IslandMusic" type="AudioStreamPlayer" parent="Space"]
stream = ExtResource( 17 )
autoplay = true

[node name="CavernMusic" type="AudioStreamPlayer" parent="Space"]
stream = ExtResource( 16 )

[node name="DemonMusic" type="AudioStreamPlayer" parent="Space"]
stream = ExtResource( 18 )

[node name="TurnSystem" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="HUD" parent="." instance=ExtResource( 8 )]
space_path = NodePath("../Space")
[connection signal="player_died" from="Space" to="." method="_on_player_died"]
[connection signal="player_entered" from="Space" to="HUD" method="_on_Space_player_entered"]
[connection signal="player_interacted" from="Space" to="HUD" method="_on_Space_player_interacted"]
[connection signal="demon_spotted" from="Space/SlimeBrain" to="Space" method="_on_SlimeBrain_demon_spotted"]
[connection signal="slime_finished_thinking" from="Space/SlimeBrain" to="TurnSystem" method="_on_SlimeBrain_slime_finished_thinking"]
[connection signal="slime_grew" from="Space/SlimeBrain" to="Space" method="_on_SlimeBrain_slime_grew"]
[connection signal="finished_turn" from="TurnSystem" to="Space" method="_on_TurnSystem_finished_turn"]
